	* Address issues with indentation of outputted code
		- NOTE: indentation within relaxed mode does not work as expected, limited by underlying libraries
	* Address concerns raised by CPAN RT84513
		- ensure that both relaxed and standard parsing always allow link tags within html
	* Update POD within Inliner.pm such that it generates more consistent documentation for CPAN/GitHub
	* Manifest updated to represent all project files
	* Fix some silly issues within tests that hadn't been noticed before	

3933	2013-12-02	Kevin Kamel <kamelkev@mailermailer.com>
	* Fix formatting of Changelog
	* Tick up the HTML::TreeBuilder version to 5.03 - 4.2 apparently no longer exists?

3934	2013-12-17	Kevin Kamel <kamelkev@mailermailer.com>
	* Work around pod bug that was causing some problems for users
	* Fix issue whereby <link> references that were not inlined weren't generating a content warning 

3935	2013-12-19	Kevin Kamel <kamelkev@mailermailer.com>
	* Fix problem with stylesheet fingerprint in link tags - regex was not correct
	* Fix issue whereby I used modern perl // (defined test) doesn't work in perl 5.8.9

3936	2013-01-13	Kevin Kamel <kamelkev@mailermailer.com>
	* Fix issue whereby malformed @media rules could cause an infinite loop within the Parser
	* Attempt to fix issue whereby moder perl // defined test still not working perl
	* Attempt to fix issue whereby Makefile will not properly generate the latest README file

3937	2013-03-18	Kevin Kamel <kamelkev@mailermailer.com>
	* Add generalized at-rule support to CSS::Inliner::Parser, @media support is reimplemented
	* Provide granularity for retrieving rules by rule name, exa qualified, @import, @media, etc
	* Attempt to improve whitespace handling when printing out a stylesheet from CSS::Inliner::Parser
	* Add support for including at-rule when printing out a stylesheet from CSS::Inliner::Parser
        * Add tests for ensuring that at-rule are working as expected