@@ -8,7 +8,7 @@ use CSS::Inliner;
 my $url = shift || 'http://www.cpan.org/index.html';
 
 my $inliner = CSS::Inliner->new({ relaxed => 1, leave_style => 1 });
-$inliner->fetch_file({url => $url});
+$inliner->fetch_file({ url => $url });
 my $inlined = $inliner->inlinify();
 
 print $inlined;
