@@ -180,3 +180,7 @@
 	* Attempt to improve whitespace handling when printing out a stylesheet from CSS::Inliner::Parser
 	* Add support for including at-rule when printing out a stylesheet from CSS::Inliner::Parser
         * Add tests for ensuring that at-rule are working as expected
+
+3938	2013-03-20	Kevin Kamel <kamelkev@mailermailer.com>
+	* Fix up code style whitespace issues
+	* Fix Parser tests that were no longer passing due to earlier changes
